feat: more oom security